Icon size changed. Hobbies section reformed to class mb-1 style.

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
         <!-- Page Content-->
         <div class="container-fluid p-0">
             <!-- ABOUT SECTION -->
-            <section class="education-section" id="about">
-                <div class="education-section-content">
+            <section class="cv-section" id="about">
+                <div class="cv-section-content">
                     <!-- NAME -->
                     <h1 class="mb-0">
                         Leo
@@ -92,8 +92,8 @@
             </section>
             <hr class="m-0" />
             <!-- EXPERIENCE SECTION -->
-            <section class="education-section" id="experience">
-                <div class="education-section-content">
+            <section class="cv-section" id="experience">
+                <div class="cv-section-content">
                     <h2 class="mb-6">WORK</h2>
                     <div class="h1">WORK EXPERIENCES</div>
                     <!-- Experience elements 1 -->
@@ -182,8 +182,8 @@
                 </div>
             </section>
             <!-- Education SECTION -->
-            <section class="education-section" id="education">
-                <div class="education-section-content">”
+            <section class="cv-section" id="education">
+                <div class="cv-section-content">”
                     <h2 class="mb-6">EDUCATION</h2>
                     <div class="h1">EDUCATION</div>
                     <!-- Education elements 1 -->
@@ -269,8 +269,8 @@
             </section>
             <hr class="m-0" />
             <!-- SKILLS SECTION -->
-            <section class="education-section" id="skills">
-                <div class="education-section-content">
+            <section class="cv-section" id="skills">
+                <div class="cv-section-content">
                     <h2 class="mb-6">EXPERIENCES</h2>
                     <div class="h1">SKILLS & EXPERIENCES</div>
                     <div>
@@ -279,6 +279,8 @@
                         <img src="assets/icons/c%23_icon.png" class="logos" alt="C#">
                         <img src="assets/icons/nodeJS_icon.png" class="logos" alt="Node JS">
                         <img src="assets/icons/kotlin_icon.png" class="logos" alt="Kotlin">
+                    </div>
+                    <div>
                         <img src="assets/icons/html5_icon.png" class="logos" alt="HTML">
                         <img src="assets/icons/css_icon.png" class="logos" alt="CSS">
                         <img src="assets/icons/java_icon.png" class="logos" alt="Java">
@@ -286,13 +288,13 @@
                         <img src="assets/icons/sql_icon.png" class="logos" alt="SQL">
                     </div>
                     <div>
-                    </div>
-                    <div>
                         <img src="assets/icons/git_icon.png" class="logos" alt="Git">
                         <img src="assets/icons/api_icon.png" class="logos" alt="REST API">
                         <img src="assets/icons/androidStudio_icon.png" class="logos" alt="Android stuidio">
                         <img src="assets/icons/docker_icon.png" class="logos" alt="Docker">
                         <img src="assets/icons/mySql_icon.png" class="logos" alt="MySql">
+                    </div>
+                    <div>
                         <img src="assets/icons/ms365_icon.png" class="logos" alt="ms365">
                         <img src="assets/icons/aws_icon.png" class="logos" alt="AWS">
                         <img src="assets/icons/unity_icon.png" class="logos" alt="Unity">
@@ -313,11 +315,11 @@
             </section>
             <hr class="m-0" />
             <!-- Interests-->
-            <section class="education-section" id="interests">
-                <div class="education-section-content">
+            <section id="interests">
+                <div class="cv-section-content">
                     <h2 class="mb-6">INTERESTS</h2>
                     <div class="h1">INTERESTS & HOBBIES</div>
-                    <div>
+                    <div class="lead mb-1">
                         As a perpetual student of software/web development, I embark on thrilling adventures abroad whenever
                         I can (because debugging code isn't quite the same as exploring ancient ruins!).
                     </div>
@@ -339,7 +341,7 @@
             </section>
             <hr class="m-0" />
             <!-- Project example with snapshot or gif -->
-            <section class="education-section" id="projects">
+            <section class="cv-section" id="projects">
                 <div class="Project examples" style="flex-shrink: initial">
                     <h2 class="mb-6">PROJECTS</h2>
                     <div class="h1">PROJECTS EXAMPLES</div>
