Double heading deleted from work

--- a/index.html
+++ b/index.html
@@ -101,8 +101,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">DevOps Engineer</h3>
                             <div class="subheading mb-3">
-                                Finn Teollisuuspalvelut Oy
-                                <a href="https://finntepa.fi" target="_blank" rel="noopener noreferrer"></a>
+                                <a href="https://finntepa.fi" target="_blank" rel="noopener noreferrer">Finn Teollisuuspalvelut Oy</a>
                             </div>
                             <ul class="list-styled">
                                 <li> Developed Excel WorkList, Offer Calculation, and CuttingList sheets with automated synchronization using VBA code for internal company use.</li>
@@ -116,8 +115,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Game Developer, Game Tester & Bug Reporter</h3>
                             <div class="subheading mb-3">
-                                Beiz Oy
-                                <a href="https://lolapanda.com/about-beiz" target="_blank" rel="noopener noreferrer"></a>
+                                <a href="https://lolapanda.com/about-beiz" target="_blank" rel="noopener noreferrer">Beiz Oy</a>
                             </div>
                             <ul class="list-styled">
                                 <li> Tested game libraries in Finnish, English, and Japanese.</li>
