--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
         <meta name="description" content="My personal CV page" />
         <meta name="Leo Suzuki" content="" />
         <title>My personal CV page</title>
+        <!-- Bootstrap CSS -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+        <!-- Custom fonts for this template-->
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.png" />
         <!-- Font Awesome icons (new free version)-->
         <link rel="stylesheet" href="assets/fontawesome-free-6.4.0-web/css/all.css">
@@ -35,9 +38,9 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">ABOUT</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">EXPERIENCE</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#work">WORK</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">EDUCATION</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">SKILLS</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experiences">EXPERIENCES</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">INTERESTS</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#projects">PROJECTS</a></li>
                 </ul>
@@ -92,7 +95,7 @@
             </section>
             <hr class="m-0" />
             <!-- EXPERIENCE SECTION -->
-            <section class="cv-section" id="experience">
+            <section class="cv-section" id="work">
                 <div class="cv-section-content">
                     <h2 class="mb-6">WORK</h2>
                     <div class="h1">WORK EXPERIENCES</div>
@@ -267,7 +270,7 @@
             </section>
             <hr class="m-0" />
             <!-- SKILLS SECTION -->
-            <section class="cv-section" id="skills">
+            <section class="cv-section" id="experiences">
                 <div class="cv-section-content">
                     <h2 class="mb-6">EXPERIENCES</h2>
                     <div class="h1">SKILLS & EXPERIENCES</div>
@@ -313,102 +316,119 @@
             </section>
             <hr class="m-0" />
             <!-- Interests-->
-            <section id="interests">
+            <section class="cv-section" id="interests">
                 <div class="cv-section-content">
                     <h2 class="mb-6">INTERESTS</h2>
                     <div class="h1">INTERESTS & HOBBIES</div>
                     <div class="lead mb-1">
-                        As a perpetual student of software/web development, I embark on thrilling adventures abroad whenever
-                        I can (because debugging code isn't quite the same as exploring ancient ruins!).
-                    </div>
-                    <div>
-                        When I find myself confined indoors, I dive deep into the captivating world of Japanese cinema and TV shows
-                        to keep my Japanese skills sharp. I'm also a skilled builder and fixer of RC cars and planes, ensuring endless fun for my little one.
-                    </div>
-                    <div>
-                        I enjoy growing indoor plants, adding a touch of nature to my tech-filled life, and gaming with my son,
-                        where we team up for epic virtual adventures.
-                    </div>
-                    <div>
-                        And let's not forget I'm deeply committed to programming, with a permanent seat in the technology realm.
-                        Oh, and did I mention I'm also a seasoned chef and former restaurant owner?
-                        The kitchen is my sanctuary, where my culinary creations become works of art.
-                    </div>
+                        <p>
+                            As a perpetual student of software/web development, I embark on thrilling adventures abroad whenever
+                            I can (because debugging code isn't quite the same as exploring ancient ruins!).
+                        </p>
+                        <p>
+                            When I find myself confined indoors, I dive deep into the captivating world of Japanese cinema and TV shows
+                            to keep my Japanese skills sharp. I'm also a skilled builder and fixer of RC cars and planes, ensuring endless fun for my little one.
+                        </p>
+                        <p>
+                            I enjoy growing indoor plants, adding a touch of nature to my tech-filled life, and gaming with my son,
+                            where we team up for epic virtual adventures.
+                        </p>
+                        <p>
+                            And let's not forget I'm deeply committed to programming, with a permanent seat in the technology realm.
+                            Oh, and did I mention I'm also a seasoned chef and former restaurant owner?
+                            The kitchen is my sanctuary, where my culinary creations become works of art.
+                        </p>
 
+                    </div>
                 </div>
             </section>
             <hr class="m-0" />
             <!-- Project example with snapshot or gif -->
             <section class="cv-section" id="projects">
-                <div class="Project examples" style="flex-shrink: initial">
+                <div class="project-examples">
                     <h2 class="mb-6">PROJECTS</h2>
-                    <div class="h1">PROJECTS EXAMPLES</div>
-                    <!-- PROJECT element-->
-                    <div class="container">
-                        <div id="projectCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="30000" data-bs-pause="hover" style="width: auto">
-                            <!-- Slides -->
-                            <div class="carousel-inner">
-                                <div class="carousel-item active">
-                                    <div class="carousel-caption">
-                                        <h5 class="project-name"><a href="project_samples/weather_app.mp4" download>Weather app</a></h5>
-                                        <p class="click_to_download">Click title for download video</p>
-                                        <p class="project-description">Weather app showing current weather and local picture</p>
-                                    </div>
-                                    <video class="carousel-video" autoplay loop>
-                                        <source src="project_samples/weather_app.mp4" type="video/mp4">
-                                        Your browser does not support the video tag.
-                                    </video>
+                    <div class="h1">PROJECT EXAMPLES</div>
+
+                    <!-- Carousel wrapper -->
+                    <div id="projectCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="30000" data-bs-pause="hover">
+                        <div class="carousel-inner">
+                            <!-- First Slide -->
+                            <div class="carousel-item active">
+                                <video class="carousel-video" autoplay loop muted>
+                                    <source src="project_samples/weather_app.mp4" type="video/mp4">
+                                    Your browser does not support the video tag.
+                                </video>
+                                <div class="carousel-caption">
+                                    <h5 class="project-name">
+                                        <a href="project_samples/weather_app.mp4" download>Weather App</a>
+                                    </h5>
+                                    <p class="click_to_download">Click the title to download video</p>
+                                    <p class="project-description">Weather app showing current weather and local picture</p>
                                 </div>
-                                <div class="carousel-item">
-                                    <div class="carousel-caption">
-                                        <h5 class="project-name"><a href="project_samples/python_art_maker3.mp4" download>Python Art Maker3</a></h5>
-                                        <p class="click_to_download">Click title for download video</p>
-                                        <p class="project-description">Art maker made with turtle graphics and colorgram</p>
-                                    </div>
-                                    <video class="carousel-video" autoplay loop>
-                                        <source src="project_samples/python_art_maker3.mp4" type="video/mp4">
-                                        Your browser does not support the video tag.
-                                    </video>
-                                </div>
-                                <div class="carousel-item">
-                                    <div class="carousel-caption">
-                                        <h5 class="project-name"><a href="project_samples/hotel_res_cplus.mp4" download>Resevation system c++</a></h5>
-                                        <p class="click_to_download">Click title for download video</p>
-                                        <p class="project-description">Reservation system C++ / Finnish. No GUI</p>
-                                    </div>
-                                    <video class="carousel-video" autoplay loop>
-                                        <source src="project_samples/hotel_res_cplus.mp4" type="video/mp4">
-                                        Your browser does not support the video tag.
-                                    </video>
-                                </div>
-                                <!-- Add more slides as needed -->
                             </div>
-                            <!-- Controls -->
-                            <!-- Indicators -->
-                            <ol class="carousel-indicators">
-                                <li data-bs-target="#projectCarousel" data-bs-slide-to="0" class="active"></li>
-                                <li data-bs-target="#projectCarousel" data-bs-slide-to="1"></li>
-                                <li data-bs-target="#projectCarousel" data-bs-slide-to="2"></li>
-                                <!-- Add more indicators as needed -->
-                            </ol>
-                            <button class="carousel-control-prev" type="button" data-bs-target="#projectCarousel" data-bs-slide="prev">
-                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                                <span class="visually-hidden">Previous</span>
-                            </button>
-                            <button class="carousel-control-next" type="button" data-bs-target="#projectCarousel" data-bs-slide="next">
-                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                                <span class="visually-hidden">Next</span>
-                            </button>
+
+                            <!-- Second Slide -->
+                            <div class="carousel-item">
+                                <video class="carousel-video" autoplay loop muted>
+                                    <source src="project_samples/python_art_maker3.mp4" type="video/mp4">
+                                    Your browser does not support the video tag.
+                                </video>
+                                <div class="carousel-caption">
+                                    <h5 class="project-name">
+                                        <a href="project_samples/python_art_maker3.mp4" download>Python Art Maker 3</a>
+                                    </h5>
+                                    <p class="click_to_download">Click the title to download video</p>
+                                    <p class="project-description">Art maker using turtle graphics and colorgram</p>
+                                </div>
+                            </div>
+
+                            <!-- Third Slide -->
+                            <div class="carousel-item">
+                                <video class="carousel-video" autoplay loop muted>
+                                    <source src="project_samples/hotel_res_cplus.mp4" type="video/mp4">
+                                    Your browser does not support the video tag.
+                                </video>
+                                <div class="carousel-caption">
+                                    <h5 class="project-name">
+                                        <a href="project_samples/hotel_res_cplus.mp4" download>Reservation System C++</a>
+                                    </h5>
+                                    <p class="click_to_download">Click the title to download video</p>
+                                    <p class="project-description">Reservation system C++ / Finnish. No GUI.</p>
+                                </div>
+                            </div>
                         </div>
+
+                        <!-- Carousel Controls -->
+                        <button class="carousel-control-prev" type="button" data-bs-target="#projectCarousel" data-bs-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#projectCarousel" data-bs-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="visually-hidden">Next</span>
+                        </button>
+
+                        <!-- Indicators -->
+                        <ol class="carousel-indicators">
+                            <li data-bs-target="#projectCarousel" data-bs-slide-to="0" class="active"></li>
+                            <li data-bs-target="#projectCarousel" data-bs-slide-to="1"></li>
+                            <li data-bs-target="#projectCarousel" data-bs-slide-to="2"></li>
+                        </ol>
                     </div>
                 </div>
             </section>
         </div>
-        <!-- Bootstrap core JS-->
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-        <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
+        <!-- jQuery (Optional, but if using make sure it's not conflicting) -->
         <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+        <!-- Bootstrap Bundle JS (includes Popper.js) -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+
+        <!-- Custom scripts (Make sure nothing here breaks Bootstrap) -->
+        <script src="js/scripts.js"></script>
+
+        <!-- Typed.js-->
         <script src="js/typed.js"></script>
+
     </body>
 </html>
