Stlig updated video section fixed.

--- a/index.html
+++ b/index.html
@@ -192,8 +192,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Bachelor of Engineering in ICT</h3>
                             <div class="subheading mb-1">TAMK - Tampere University of Applied Sciences</div>
-                            <div>Specializing in software development, this program equips students with advanced skills in software solutions and system integration,
-                                covering programming, algorithms, data structures, and systems architecture with a focus on practical, real-world problem-solving.</div>
+                            <div>Degree program equips students with advanced software development skills, focusing on programming, algorithms, system integration, and real-world problem-solving.</div>
                             <div>Key Courses and Projects:
                                 <ul>
                                     <li>Advanced Programming Techniques: Covered modern programming languages and methodologies.</li>
@@ -209,10 +208,9 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Software Developer</h3>
                             <div class="subheading mb-1">TPA / SASKY Municipal Education and Training Consortium</div>
-                            <div>Vocational qualification in Information and Communications Technology, focusing on practical skills and knowledge essential for software development and IT systems management.</div>
+                            <div>Vocational qualification in ICT, with a focus on practical skills and knowledge essential for software development and IT systems management.</div>
                             <div>Key Learnings and Achievements:
                                 <ul>
-                                    <li>Basic Program Development: Gained foundational knowledge in programming principles and practices.</li>
                                     <li>Python MTA Certification: Earned certification demonstrating proficiency in Python programming.</li>
                                     <li>Game Development: Developed games using Unity and C#, focusing on practical application and interactive design.</li>
                                     <li>School Diploma: Successfully completed the vocational program, receiving a diploma in recognition of achievements.</li>
@@ -226,7 +224,7 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Sergeant</h3>
                             <div class="subheading mb-1">The Finnish Defence Forces</div>
-                            <div>Completed Non-Commissioned Officer Training and Leadership Training, focusing on leadership skills, tactical operations, and organizational management within a military context.</div>
+                            <div>Non-Commissioned Officer Training and Leadership Training, focusing on leadership skills and organizational management.</div>
                             <div>Key Training Components:
                                 <ul>
                                     <li>Leadership Skills: Developed effective leadership techniques and team management strategies.</li>
@@ -239,7 +237,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">High school graduated</h3>
-                            <div class="subheading mb-1">The Finnish Defence Forces</div>
+                            <div class="subheading mb-1">Tampere Arts-Oriented Senior Secondary School</div>
                             <div>High School Diploma and Matriculation Examination Completion</div>
                             <div>Key Learnings and Achievements:
                                 <ul>
