Stlig updated video section fixed.

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                                 <ul>
                                     <li>Advanced Programming Techniques: Covered modern programming languages and methodologies.</li>
                                     <li>Software Engineering Principles: Emphasized best practices in software development, including Agile methodologies.</li>
-                                    <li>Capstone Project: Developed a significant project demonstrating the application of acquired skills, involving both individual and team-based work.</li>
+                                    <li>Project Work: Developed multiple projects demonstrating the application of acquired skills, involving both individual and team-based work.</li>
                                 </ul>
                             </div>
                         </div>
