--- a/index.html
+++ b/index.html
@@ -352,22 +352,19 @@
                         <div class="carousel-inner">
                             <!-- First Slide -->
                             <div class="carousel-item active">
-                                <video class="carousel-video" autoplay loop muted>
-                                    <source src="project_samples/weather_app.mp4" type="video/mp4">
-                                    Your browser does not support the video tag.
-                                </video>
+                                <img class="carousel-element" src="weather_app_HTML_JS/samples/img/app_large/Rio%20de%20Janeiro.jpg" alt="Rio de Janeiro">
                                 <div class="carousel-caption">
                                     <h5 class="project-name">
-                                        <a href="project_samples/weather_app.mp4" download>Weather App</a>
+                                        <a href="weather_app_HTML_JS/index_weather_app.html">Weather App</a>
                                     </h5>
-                                    <p class="click_to_download">Click the title to download video</p>
+                                    <p class="click_to_test_test program">Click the title to try the app</p>
                                     <p class="project-description">Weather app showing current weather and local picture</p>
                                 </div>
                             </div>
 
                             <!-- Second Slide -->
                             <div class="carousel-item">
-                                <video class="carousel-video" autoplay loop muted>
+                                <video class="carousel-element" autoplay loop muted>
                                     <source src="project_samples/python_art_maker3.mp4" type="video/mp4">
                                     Your browser does not support the video tag.
                                 </video>
@@ -382,7 +379,7 @@
 
                             <!-- Third Slide -->
                             <div class="carousel-item">
-                                <video class="carousel-video" autoplay loop muted>
+                                <video class="carousel-element" autoplay loop muted>
                                     <source src="project_samples/hotel_res_cplus.mp4" type="video/mp4">
                                     Your browser does not support the video tag.
                                 </video>
