Project section updated.

--- a/index.html
+++ b/index.html
@@ -352,43 +352,34 @@
                         <div class="carousel-inner">
                             <!-- First Slide -->
                             <div class="carousel-item active">
-                                <img class="carousel-element" src="weather_app_HTML_JS/samples/img/app_large/Rio%20de%20Janeiro.jpg" alt="Rio de Janeiro">
+                                <img class="carousel-element" src="project_samples/Weather_app_html/Tokyo2.jpg" alt="Tokyo">
                                 <div class="carousel-caption">
                                     <h5 class="project-name">
-                                        <a href="weather_app_HTML_JS/index_weather_app.html">Weather App</a>
+                                        Weather App (HTML, JS, CSS)
                                     </h5>
-                                    <p class="click_to_test_test program">Click the title to try the app</p>
                                     <p class="project-description">Weather app showing current weather and local picture</p>
                                 </div>
                             </div>
 
                             <!-- Second Slide -->
                             <div class="carousel-item">
-                                <video class="carousel-element" autoplay loop muted>
-                                    <source src="project_samples/python_art_maker3.mp4" type="video/mp4">
-                                    Your browser does not support the video tag.
-                                </video>
+                                <img class="carousel-element" src="./project_samples/Art_Maker_3_python/Circle%20art%202.jpg" alt="Circle art">
                                 <div class="carousel-caption">
                                     <h5 class="project-name">
-                                        <a href="project_samples/python_art_maker3.mp4" download>Python Art Maker 3</a>
+                                        Art Maker 3 (Python)
                                     </h5>
-                                    <p class="click_to_download">Click the title to download video</p>
-                                    <p class="project-description">Art maker using turtle graphics and colorgram</p>
+                                    <p class="project-description">Art maker using liblaries turtle graphic, colorgram and Tkinter</p>
                                 </div>
                             </div>
 
                             <!-- Third Slide -->
                             <div class="carousel-item">
-                                <video class="carousel-element" autoplay loop muted>
-                                    <source src="project_samples/hotel_res_cplus.mp4" type="video/mp4">
-                                    Your browser does not support the video tag.
-                                </video>
+                                <img class="carousel-element" src="./project_samples/DXF_file_calc/tota_multiple__file.png" alt="DXF Calculator">
                                 <div class="carousel-caption">
                                     <h5 class="project-name">
-                                        <a href="project_samples/hotel_res_cplus.mp4" download>Reservation System C++</a>
+                                        DXF Reader and Calculator (Python)
                                     </h5>
-                                    <p class="click_to_download">Click the title to download video</p>
-                                    <p class="project-description">Reservation system C++ / Finnish. No GUI.</p>
+                                    <p class="project-description">Reading DXF file and return total or/and detailed length</p>
                                 </div>
                             </div>
                         </div>
