--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
         <meta name="description" content="My personal CV page" />
         <meta name="Leo Suzuki" content="" />
         <title>My personal CV page</title>
-        <!-- Bootstrap CSS -->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
         <!-- Custom fonts for this template-->
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.png" />
         <!-- Font Awesome icons (new free version)-->
@@ -354,7 +352,7 @@
                             <div class="carousel-item active">
                                 <img class="carousel-element" src="project_samples/Weather_app_html/Tokyo2.jpg" alt="Tokyo">
                                 <div class="carousel-caption">
-                                    <h5 class="project-name">
+                                    <h5 class="carousel-project-name">
                                         Weather App (HTML, JS, CSS)
                                     </h5>
                                     <p class="project-description">Weather app showing current weather and local picture</p>
@@ -365,7 +363,7 @@
                             <div class="carousel-item">
                                 <img class="carousel-element" src="./project_samples/Art_Maker_3_python/Circle%20art%202.jpg" alt="Circle art">
                                 <div class="carousel-caption">
-                                    <h5 class="project-name">
+                                    <h5 class="carousel-project-name">
                                         Art Maker 3 (Python)
                                     </h5>
                                     <p class="project-description">Art maker using liblaries turtle graphic, colorgram and Tkinter</p>
@@ -376,7 +374,7 @@
                             <div class="carousel-item">
                                 <img class="carousel-element" src="./project_samples/DXF_file_calc/tota_multiple__file.png" alt="DXF Calculator">
                                 <div class="carousel-caption">
-                                    <h5 class="project-name">
+                                    <h5 class="carousel-project-name">
                                         DXF Reader and Calculator (Python)
                                     </h5>
                                     <p class="project-description">Reading DXF file and return total or/and detailed length</p>
@@ -393,7 +391,6 @@
                             <span class="carousel-control-next-icon" aria-hidden="true"></span>
                             <span class="visually-hidden">Next</span>
                         </button>
-
                         <!-- Indicators -->
                         <ol class="carousel-indicators">
                             <li data-bs-target="#projectCarousel" data-bs-slide-to="0" class="active"></li>
