ink and button addedto project section.

--- a/index.html
+++ b/index.html
@@ -348,6 +348,7 @@
                     <!-- Carousel wrapper -->
                     <div id="projectCarousel" class="carousel slide" data-bs-ride="carousel" data-bs-interval="30000" data-bs-pause="hover">
                         <div class="carousel-inner">
+
                             <!-- First Slide -->
                             <div class="carousel-item active">
                                 <img class="carousel-element" src="project_samples/Weather_app_html/Tokyo2.jpg" alt="Tokyo">
@@ -356,6 +357,7 @@
                                         Weather App (HTML, JS, CSS)
                                     </h5>
                                     <p class="project-description">Weather app showing current weather and local picture</p>
+                                    <a href="https://weather-and-pic-app-node.vercel.app" class="btn btn-primary" target="_blank">Try it</a>
                                 </div>
                             </div>
 
