--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
                                         Weather App (HTML, JS, CSS)
                                     </h5>
                                     <p class="project-description">Weather app showing current weather and local picture</p>
-                                    <a href="https://weather-and-pic-app-node.vercel.app" class="btn btn-primary" target="_blank">Try it</a>
+                                    <a href="https://weather-and-pic-app-node.vercel.app" class="btn btn-link" target="_blank">Try it</a>
                                 </div>
                             </div>
 
