--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
                                         Weather App (HTML, JS, CSS)
                                     </h5>
                                     <p class="project-description">Weather app showing current weather and local picture</p>
-                                    <a href="https://weather-and-pic-app-node.vercel.app" class="btn btn-link" target="_blank">Try it</a>
+                                    <a href="https://weather-and-pic-app-node.vercel.app" class="btn btn-outline-light" target="_blank">Try it!</a>
                                 </div>
                             </div>
 
@@ -369,19 +369,60 @@
                                         Art Maker 3 (Python)
                                     </h5>
                                     <p class="project-description">Art maker using liblaries turtle graphic, colorgram and Tkinter</p>
+                                    <a href="https://github.com/LeoSuzu/Art_maker3_python" class="btn btn-outline-light" target="_blank">Repository</a>
                                 </div>
                             </div>
 
                             <!-- Third Slide -->
                             <div class="carousel-item">
-                                <img class="carousel-element" src="./project_samples/DXF_file_calc/tota_multiple__file.png" alt="DXF Calculator">
+                                <img class="carousel-element" src="project_samples/DXF_file_calc/collab__file.png" alt="DXF Calculator">
                                 <div class="carousel-caption">
                                     <h5 class="carousel-project-name">
                                         DXF Reader and Calculator (Python)
                                     </h5>
                                     <p class="project-description">Reading DXF file and return total or/and detailed length</p>
+                                    <a href="https://finntepa.fi" class="btn btn-outline-light" target="_blank">Ask about</a>
                                 </div>
                             </div>
+
+                            <!-- Fourth Slide -->
+                            <div class="carousel-item">
+                                <img class="carousel-element" src="./project_samples/AndroidApp/AndroiApps.png" alt="Android studio projects">
+                                <div class="carousel-caption">
+                                    <h5 class="carousel-project-name">
+                                        Android studio projects (Java, Kotlin, Jetpack Compose)
+                                    </h5>
+                                    <p class="project-description">Various Android native projects</p>
+                                    <a href="" class="btn btn-outline-light" target="_blank">Coming soon</a>
+                                </div>
+                            </div>
+
+                            <!-- Fifth Slide -->
+
+                            <div class="carousel-item">
+                                <img class="carousel-element" src="./project_samples/BitcoinAnalysisPre/BitcoinAnPred.png" alt="Bitcoin analysis and predict">
+                                <div class="carousel-caption">
+                                    <h5 class="carousel-project-name">
+                                        Bitcoin analysis and predict (Python, Machine Learning (LTSM, CNN))
+                                    </h5>
+                                    <p class="project-description">Bitcoin analysis and predict with LTSM and CNN</p>
+                                    <a href="https://github.com/LeoSuzu/Bitcoin-analysis-and-predict" class="btn btn-outline-light" target="_blank">Repository</a>
+                                </div>
+                            </div>
+
+                            <!-- Sixth Slide -->
+
+                            <div class="carousel-item">
+                                <img class="carousel-element" src="./project_samples/ArduinoGame/ArduinoGame.png" alt="Arduino project">
+                                <div class="carousel-caption">
+                                    <h5 class="carousel-project-name">
+                                        Arduino small game console (C++, Arduino Nano, Sensors)
+                                    </h5>
+                                    <p class="project-description">Arduino small game console with team</p>
+                                    <a href="https://github.com/LeoSuzu/arduino_game_console" class="btn btn-outline-light" target="_blank">Repository</a>
+                                </div>
+                            </div>
+
                         </div>
 
                         <!-- Carousel Controls -->
@@ -398,6 +439,9 @@
                             <li data-bs-target="#projectCarousel" data-bs-slide-to="0" class="active"></li>
                             <li data-bs-target="#projectCarousel" data-bs-slide-to="1"></li>
                             <li data-bs-target="#projectCarousel" data-bs-slide-to="2"></li>
+                            <li data-bs-target="#projectCarousel" data-bs-slide-to="3"></li>
+                            <li data-bs-target="#projectCarousel" data-bs-slide-to="4"></li>
+                            <li data-bs-target="#projectCarousel" data-bs-slide-to="5"></li>
                         </ol>
                     </div>
                 </div>
