--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
 
                             <!-- First Slide -->
                             <div class="carousel-item active">
-                                <img class="carousel-element" src="project_samples/Weather_app_html/Tokyo2.jpg" alt="Tokyo">
+                                <img class="carousel-element" src="project_samples/WePicApp/Tampere.png" alt="Tampere">
                                 <div class="carousel-caption">
                                     <h5 class="carousel-project-name">
                                         Weather App (HTML, JS, CSS)
