--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
                         <a class="social-icon" href="mailto:leona.suzuki@tuni.fi"><i class="fa-solid fa-envelope"></i></a>
                         <a class="social-icon" href="https://github.com/LeoSuzu" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github"></i></a>
                         <a class="social-icon" href="www.linkedin.com/in/LeoSuzu" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="assets/CV/cv_LeoSuzu_eng.pdf" target="_blank" rel="noopener noreferrer"><i class="fa fa-file-lines"></i></a>
-                        <a class="social-icon" href="assets/CV/cv_LeoSuzu_eng.pdf" download><i class="fa-solid fa-file-arrow-down"></i></a>
+                        <a class="social-icon" href="assets/CV/cv_leosuzu.pdf" target="_blank" rel="noopener noreferrer"><i class="fa fa-file-lines"></i></a>
+                        <a class="social-icon" href="assets/CV/cv_leosuzu.pdf" download><i class="fa-solid fa-file-arrow-down"></i></a>
                         <a class="social-icon" href="tel:+358440122110"><i class="fa-solid fa-mobile-screen-button"></i></a>
                     </div>
                 </div>
