Work experience updated.

--- a/index.html
+++ b/index.html
@@ -100,7 +100,20 @@
                     <!-- Experience elements 1 -->
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">DevOps Engineer</h3>
+                            <h3 class="mb-0">Assistant Coordinator</h3>
+                            <div class="subheading mb-3">
+                                <a href="https://ilkkas.com" target="_blank" rel="noopener noreferrer">ICS NORDIC</a>
+                            </div>
+                            <ul class="list-styled">
+                                <li> Schedule planning, Production documentation, Script editing, and technic assistance.</li>
+                            </ul>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">05/2024 - 09/2024</span></div>
+                    </div>
+                    <!-- Experience elements 2 -->
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Software Engineer</h3>
                             <div class="subheading mb-3">
                                 <a href="https://finntepa.fi" target="_blank" rel="noopener noreferrer">Finn Teollisuuspalvelut Oy</a>
                             </div>
@@ -111,10 +124,10 @@
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">05/2024 - 09/2024</span></div>
                     </div>
-                    <!-- Experience elements 2 -->
+                    <!-- Experience elements 3 -->
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Game Developer, Game Tester & Bug Reporter</h3>
+                            <h3 class="mb-0">Game Developer</h3>
                             <div class="subheading mb-3">
                                 <a href="https://lolapanda.com/about-beiz" target="_blank" rel="noopener noreferrer">Beiz Oy</a>
                             </div>
@@ -125,7 +138,7 @@
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">03/2021 - 12/2021</span></div>
                     </div>
-                    <!-- Experience elements 3 -->
+                    <!-- Experience elements 4 -->
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Web Developer</h3>
@@ -139,7 +152,7 @@
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">11/2020 - 01/2021</span></div>
                     </div>
-                    <!-- Experience elements 4 -->
+                    <!-- Experience elements 5 -->
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Entrepreneur / CEO</h3>
