Work experience updated.

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                     <!-- Experience elements 1 -->
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Assistant Coordinator</h3>
+                            <h3 class="mb-0">Assistance production coordinator</h3>
                             <div class="subheading mb-3">
                                 <a href="https://ilkkas.com" target="_blank" rel="noopener noreferrer">ICS NORDIC</a>
                             </div>
