Education section simplefied

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                         Leo
                         <span class="text-primary">Suzuki</span>
                     </h1>
-                    <p>ICT engineer, software developer and embedded systems</p>
+                    <p>ICT engineer, software developer</p>
                     <div>
                         <!-- Typing text (changing all the time / typed.js)-->
                         <h3><br><span id="typed"></span></h3>
@@ -65,7 +65,7 @@
                     </div>
                     <div class="lead mb-1">
                         <p>
-                            I’m currently studying IT Engineering at Tampere University of Applied Sciences
+                            I’m currently studying ICT Engineering at Tampere University of Applied Sciences
                             and have already completed Software Developer training at Sasky.
                         </p>
                         <p>
@@ -105,7 +105,7 @@
                                 <a href="https://ilkkas.com" target="_blank" rel="noopener noreferrer">ICS NORDIC</a>
                             </div>
                             <ul class="list-styled">
-                                <li> Schedule planning, Production documentation, Script editing, and technic assistance.</li>
+                                <li> Schedule planning, document translations and technical assistance.</li>
                             </ul>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">05/2024 - 09/2024</span></div>
@@ -231,50 +231,11 @@
                         <div class="flex-shrink-0"><span class="text-primary">08/2020 - 12/2021</span></div>
                     </div>
                     <!-- Education elements 3 -->
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Sergeant</h3>
-                            <div class="subheading mb-1">The Finnish Defence Forces</div>
-                            <div>Non-Commissioned Officer Training and Leadership Training, focusing on leadership skills and organizational management.</div>
-                            <div>Key Training Components:
-                                <ul>
-                                    <li>Leadership Skills: Developed effective leadership techniques and team management strategies.</li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">2000 - 2001</span></div>
-                    </div>
+
                     <!-- Education elements 4 -->
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">High school graduated</h3>
-                            <div class="subheading mb-1">Tampere Arts-Oriented Senior Secondary School</div>
-                            <div>High School Diploma and Matriculation Examination Completion</div>
-                            <div>Key Learnings and Achievements:
-                                <ul>
-                                    <li>Delivered a speech/performance during school-wide events, reflecting the school's focus on expressive arts and creativity.</li>
-                                    <li>Successfully completed secondary education and passed the Finnish national matriculation exam, qualifying for higher education.</li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary"></span></div>
-                    </div>
+
                     <!-- Education elements 5 -->
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Graduated</h3>
-                            <div class="subheading mb-1">Yokohama Asahiku Wakabadai North School</div>
-                            <div>Attended for six years, gaining fluency in Japanese and a deep understanding of Japanese culture.</div>
-                            <div>Key Learnings:
-                                <ul>
-                                    <li>Achieved fluency in Japanese, both spoken and written.</li>
-                                    <li>Developed a strong understanding of Japanese customs, traditions, and societal values.</li>
-                                    <li>Engaged in cultural exchange and immersive learning experiences.</li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary"></span></div>
-                    </div>
+
                 </div>
             </section>
             <hr class="m-0" />
